<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="292dp"
    android:layout_height="106dp"
    android:orientation="vertical"
    android:background="@drawable/okryglenie_storon"
    android:elevation="20dp"
    tools:context=".settings.AccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save_profile"
        android:gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:textStyle="bold"
        android:textAppearance="@style/gray_letters_1"/>

    <TextView
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/info_save"
        android:textAppearance="@style/gray_letters_2" />
    <Button
        android:layout_width="92dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/resume"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/transparent"/>

</LinearLayout>