<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".settings.SettingGoalActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:titleTextColor="@color/actionBarColor"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/My_goals"
            android:textColor="@color/actionBarColor"
            android:textSize="17sp"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle1"
            android:text="@string/goals"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor1"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle2"
            android:text="@string/initial_weight"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor2"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle2"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle3"
            android:text="@string/desired_weight"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor3"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle3"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle4"
            android:text="@string/activity_level"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor4"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle4"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle5"
            android:text="@string/goal_week"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor5"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle5"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle6"
            android:text="@string/calorie_goal"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor6"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle6"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle7"
            android:text="@string/steps"
            android:textAppearance="@style/some_id_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescriptor7"
            android:text="@string/vvod"
            android:textAppearance="@style/gray_letters_2"
            android:layout_below="@id/txtTitle7"/>

    </RelativeLayout>

</LinearLayout>